--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 {\rtf1\ansi\ansicpg949\cocoartf2821
 \cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fmodern\fcharset0 Courier;}
-{\colortbl;\red255\green255\blue255;\red0\green0\blue0;}
-{\*\expandedcolortbl;;\cssrgb\c0\c0\c0;}
+{\colortbl;\red255\green255\blue255;}
+{\*\expandedcolortbl;;}
 \paperw11900\paperh16840\margl1440\margr1440\vieww19940\viewh15920\viewkind0
 \deftab720
 \pard\pardeftab720\partightenfactor0
 
 \f0\fs26 \cf0 \expnd0\expndtw0\kerning0
-\outl0\strokewidth0 \strokec2 # Created by https://www.toptal.com/developers/gitignore/api/xcode,swift\
+# Created by https://www.toptal.com/developers/gitignore/api/xcode,swift\
 # Edit at https://www.toptal.com/developers/gitignore?templates=xcode,swift\
 \
 ### Swift ###\
@@ -108,4 +108,8 @@ iOSInjectionProject/\
 **/xcshareddata/WorkspaceSettings.xcsettings\
 \
 # End of https://www.toptal.com/developers/gitignore/api/xcode,swift\
+\
+*.xcconfig\
+**/.DS_Store\
+**/xcuserdata/\
 }
